<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">
        android:hint="@string/text_clave">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_sesion"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/text_usuario_olvido_clave"
            android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/text_recuperar"
        android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/text_no_tiene_usuario"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/text_registrarse"
            android:onClick="irRegistro"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>