<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.HomeActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_tiendas"
        />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_favoritos"
        />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_perfil"
            />




    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/contenedor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     </androidx.viewpager.widget.ViewPager>

</LinearLayout>